--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "start": "node server/index.js"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "apollo-server-express": "^1.3.6",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "graphql": "^0.13.2",
+    "graphql-import": "^0.6.0",
+    "graphql-tools": "^3.0.2"
   }
 }
